--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ authors = [
 [tool.poetry.dependencies]
 python = "~3.8"
 pre-commit = {version = "^3.2.0", source = "PyPI"}
+SQLAlchemy = {version = "^2.0.25", source = "PyPI"}
 
 [tool.poetry.dev-dependencies]
 
