--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ authors = [
 python = "~3.8"
 pre-commit = {version = "^3.2.0", source = "PyPI"}
 SQLAlchemy = {version = "^2.0.25", source = "PyPI"}
+opencensus-ext-azure = "^1.1.13"
+pydantic = "^2.5.3"
 
 [tool.poetry.dev-dependencies]
 
