--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ numpy = {version = "^1.24.2", source = "PyPI"}
 opencensus-ext-azure = {version = "^1.1.13", source = "PyPI"}
 pre-commit = {version = "^3.2.0", source = "PyPI"}
 pydantic = {version = "^2.5.3", source = "PyPI"}
-SQLAlchemy = {version = "^2.0.25", source = "PyPI"}
+SQLAlchemy = {version = "1.4.50", source = "PyPI"}
 torch = {version = ">=1.7.0", source = "PyPI"}
 
 [tool.poetry.dev-dependencies]
