--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ opencensus-ext-azure = {version = "^1.1.13", source = "PyPI"}
 pre-commit = {version = "^3.2.0", source = "PyPI"}
 pydantic = {version = "^1.8.2", source = "PyPI"}
 SQLAlchemy = {version = "^1.4.50", source = "PyPI"}
-torch = {version = "^2.0.0", source = "PyPI"}
+torch = {version = "^2.0.0"}
 
 [tool.poetry.dev-dependencies]
 
