Specify py-modules for setuptools

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,9 @@ dev = [
     "safety>=3.2.4",
 ]
 
+[tool.setuptools]
+py-modules = ["CVToolkit"]
+
 [tool.isort]
 profile = "black"
 multi_line_output = 3
